Completes Odin Project from Alignment

--- a/index.html
+++ b/index.html
@@ -33,22 +33,22 @@
         </div>
     </header>
     <section class="section_1">
-        <div class="information">Some random information</div>
+        <div class="information">Some random information.</div>
         <div class="section_1_images">
             <div>
-                <img src="" alt="" srcset="">
+                <img src="./Images/cat.jpg" alt="Picture of cat" srcset="">
                 <div>this is some subtext under an illustration or image</div>
             </div>
             <div>
-                <img src="" alt="" srcset="">
+                <img src="./Images/dog.jpg" alt="Picture of dog" srcset="">
                 <div>this is some subtext under an illustration or image</div>
             </div>
             <div>
-                <img src="" alt="" srcset="">
+                <img src="./Images/bunny.jpg" alt="Picture of bunny" srcset="">
                 <div>this is some subtext under an illustration or image</div>
             </div>
             <div>
-                <img src="" alt="" srcset="">
+                <img src="./Images/elephant.jpg" alt="Picture of elephant" srcset="">
                 <div>this is some subtext under an illustration or image</div>
             </div>
         </div>
@@ -56,12 +56,12 @@
 
     <section class="section_2">
         <div>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice. </div>
-        <div class="quoted">Thor, God of Thunder</div>
+        <div class="quoted">-Thor, God of Thunder</div>
     </section>
 
     <section class="section_3">
         <div class="section_3_content">
-            <div>Call to action! It's time!</div>
+            <div class="main_text">Call to action! It's time!</div>
             <div>Sign up for out product by clicking that button right over there!</div>
         </div>
         <button>Sign up</button>
