Changes the layout for Demon Slayer !!

--- a/index.html
+++ b/index.html
@@ -9,66 +9,106 @@
 </head>
 <body>
     <header>
-        <div class="menu">
-            <div class="hero_logo_text">Header Logo</div>
-            <div class="menu_links">
-                <div>header link one</div>
-                <div>header link two</div>
-                <div>header link three</div>
+        <div class="header_class">
+            <img src="./Images/logo.png" alt="Demon Slayer logo">
+            <div class="header_links">
+                <a href="#about">About</a>
+                <a href="#characters">Team</a>
+                <a href="#Quote">Quote</a>
             </div> 
         </div>
-        <div class="header_content">
-            <div class="Introduction">
-                <div class="hero_main_text">
-                    This website is awesome
-                </div>
-                <div class="hero_secondary_text">
-                    This website has some subtext that goes here under the main title. It's a smaller font and color is lower contrast
-                </div>
+        <div class="about" id="about">
+            <div class="introduction">
+                <h1>Demon Slayer is awesome</h1>
+                <p>Demon Slayer aka Kimetsu No Yaiba is not just an Anime, it is an emotion. It has action, comedy, tragedy and lot of life lessons to learn. Watch this if you want to get motivated as it has only 21 episodes for S1. </p>
                 <button>Sign up</button>
             </div>
-            <div class="image_area">
-                <div>This is a placeholder for an image</div>
+            <div class="cover_art">
+                <img src="./Images/DemonSlayerCover.jpg" alt="Demon Slayer cover art">
             </div>
         </div>
     </header>
-    <section class="section_1">
-        <div class="information">Some random information.</div>
-        <div class="section_1_images">
-            <div>
-                <img src="./Images/cat.jpg" alt="Picture of cat" srcset="">
-                <div>this is some subtext under an illustration or image</div>
+    <section class="characters" id="characters">
+        <div class="team_demon_slayer">
+            <div class="team_title"> ⚔️ Meet the Demon Slayers ⚔️</div>
+            <div class="members">
+                <div>
+                    <img src="./Images/Tanjiro.jpg" alt="Picture of Tanjiro Kamado">
+                    <div>Tanjiro Kamado</div>
+                </div>
+                <div>
+                    <img src="./Images/Zenitsu-Agatsuma.jpg" alt="Picture of Zenitsu Agatsuma">
+                    <div>Zenitsu Agatsuma</div>
+                </div>
+                <div>
+                    <img src="./Images/inouske.jpg" alt="Picture of Inosuke Hashibira">
+                    <div>Inosuke Hashibira</div>
+                </div>
+                <div>
+                    <img src="./Images/kanao.jpg" alt="Picture of Kanao Tsuyuri">
+                    <div>Kanao Tsuyuri</div>
+                </div>
             </div>
-            <div>
-                <img src="./Images/dog.jpg" alt="Picture of dog" srcset="">
-                <div>this is some subtext under an illustration or image</div>
+        </div>
+        <div class="team_hashiras">
+            <div class="team_title"> ⚔️ Meet the Hashiras ⚔️</div>
+            <div class="members">
+                <div>
+                    <img src="./Images/Giyu-Tomioka.jpg" alt="Picture of Giyu Tomioka">
+                    <div>Giyu Tomioka</div>
+                </div>
+                <div>
+                    <img src="./Images/shinobu.jpg" alt="Picture of Shinobu Kocho">
+                    <div>Shinobu Kocho</div>
+                </div>
+                <div>
+                    <img src="./Images/rengoku.jpg" alt="Picture of Kyojuro Rengoku">
+                    <div>Kyojuro Rengoku</div>
+                </div>
+                <div>
+                    <img src="./Images/Tenzen.png" alt="Picture of Tenzen Uzui">
+                    <div>Tenzen Uzui</div>
+                </div>
             </div>
-            <div>
-                <img src="./Images/bunny.jpg" alt="Picture of bunny" srcset="">
-                <div>this is some subtext under an illustration or image</div>
-            </div>
-            <div>
-                <img src="./Images/elephant.jpg" alt="Picture of elephant" srcset="">
-                <div>this is some subtext under an illustration or image</div>
+        </div>
+        <div class="team_demon">
+            <div class="team_title"> ⚔️ Meet the Demons ⚔️</div>
+            <div class="members">
+                <div>
+                    <img src="./Images/Muzan.jpg" alt="Picture of Muzan Kibutsuji">
+                    <div>Muzan Kibutsuji</div>
+                </div>
+                <div>
+                    <img src="./Images/nezuko-chan.jpg" alt="Picture of Nezuko Kamado">
+                    <div>Nezuko Kamado</div>
+                </div>
+                <div>
+                    <img src="./Images/tamayo.jpg" alt="Picture of Tamayo">
+                    <div>Tamayo</div>
+                </div>
+                <div>
+                    <img src="./Images/Akaza.jpg" alt="Picture of Akaza">
+                    <div>Akaza</div>
+                </div>
             </div>
         </div>
     </section>
 
-    <section class="section_2">
-        <div>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice. </div>
-        <div class="quoted">-Thor, God of Thunder</div>
+    <section class="Quote" id="Quote">
+        <p>If you can do one thing, hone it to perfection. Hone it to the utmost limit. </p>
+        <p class="quoted">-Jigoro Kuwajima, Thunder Hashira</p>
     </section>
 
-    <section class="section_3">
-        <div class="section_3_content">
-            <div class="main_text">Call to action! It's time!</div>
-            <div>Sign up for out product by clicking that button right over there!</div>
+    <section class="last_note">
+        <div class="last_note_content">
+            <div class="main_text">Time to sign up for Season 4!</div>
+            <div>Sign up to watch Demon Slayer Season 4 early by clicking that button right over there!</div>
         </div>
         <button>Sign up</button>
     </section>
 
     <footer>
-        <div>Copyright &copy The Odin Project 2021</div>
+        <div>Copyright &copy Debanjana 2022</div>
     </footer>
 
 </body>
